@@ -1,0 +1,4 @@
+#!/usr/bin/env perl
+use Dancer;
+use recipe2;
+dance;
