@@ -1,12 +1,29 @@
-port: 80
+appname: "recipe2"
+
+# The default layout to use for your application (located in
+# views/layouts/main.tt)
+layout: "main"
+
+# when the charset is set to UTF-8 Dancer will handle for you
+# all the magic of encoding and decoding. You should not care
+# about unicode within your app when this setting is set (recommended).
+charset: "UTF-8"
+
+# template engine
+# simple: default and very basic template engine
+# template_toolkit: TT
+
+port: 4500
 session: "YAML"
 session_dir: "/tmp/dancer-sessions"
-template: template_toolkit
+template: "template_toolkit"
 engines:
     template_toolkit:
+        encoding : 'utf8'
         start_tag: '[%'
         stop_tag: '%]'
 facebook:
     postback: "http://www.yourapplication.com/facebook/postback/"
     app_id: "XXXXXXXXXXXXXXXX"
     secret: "XXXXXXXXXXXXXXXXXXXXXXXXXXX"
+
