@@ -1,6 +1,17 @@
+# configuration file for production environment
+
+# only log warning and error messsages
 log: "warning"
+
+# log message to a file in logs/
+logger: "file"
+
+# don't consider warnings critical
 warnings: 0
+
+# hide errors 
 show_errors: 0
+
+# cache route resolution for maximum performance
 route_cache: 1
-auto_reload: 0
 
