@@ -1,8 +1,0 @@
-
-[% IF response %]
-	<h3>Facebook Response</h3>
-	<textarea style="width: 500px; height: 250px;">[% response %]</textarea>
-[% END %]
-</div>
-</body>
-</html>
