@@ -1,5 +1,3 @@
-[% INCLUDE header.tt %]
-
 <h1>iCal Importer</h1>
 This utility will import an iCal (ics) feed to your Facebook event calendar.
 
@@ -9,4 +7,7 @@ iCal Feed/File URI:
 <input type="submit">
 </form>
 
-[% INCLUDE footer.tt response = response %]
+[% IF response %]
+	<h3>Facebook Response</h3>
+	<textarea style="width: 500px; height: 250px;">[% response %]</textarea>
+[% END %]
