@@ -1,6 +1,7 @@
-[% INCLUDE header.tt %]
-
 <h1>RSS Importer</h1>
 Import complete. <a href="http://www.facebook.com/">View Facebook to see your import.</a>
 
-[% INCLUDE footer.tt response = response %]
+[% IF response %]
+	<h3>Facebook Response</h3>
+	<textarea style="width: 500px; height: 250px;">[% response %]</textarea>
+[% END %]
